--- a/HTML/home.html
+++ b/HTML/home.html
@@ -5,135 +5,224 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FBICom - L'Agenzia Che Mancava</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Remodelacion-FBI-Communication/CSS/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header>
-        <nav>
+    <header id="main-header">
+        <nav class="container">
             <div class="logo">FBI<span>COM.</span></div>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Agenzia</a></li>
                 <li><a href="#">Servizi</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contatti</a></li>
             </ul>
-            <button class="btn-top">Contattaci</button>
+            <a href="#" class="btn-primary">Contattaci</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="hero-left">
+    <section class="hero container">
+        <div class="hero-content">
             <span class="tag">MARKETING E PUBBLICITÀ</span>
-            <h1>L'AGENZIA CHE <br><span class="red">MANCAVA</span></h1>
+            <h1>L'AGENZIA CHE <br><span class="text-red">MANCAVA</span></h1>
             <p>Ripensiamo completamente il tuo business. Creiamo strategie su misura per scalare il tuo mercato e
                 ottenere risultati professionali mai visti prima.</p>
             <div class="hero-actions">
-                <button class="btn-red">Scopri di più</button>
-                <button class="btn-outline">I nostri servizi</button>
+                <a href="#" class="btn-primary">Scopri di più</a>
+                <a href="#" class="btn-outline">I nostri servizi</a>
             </div>
         </div>
-        <div class="hero-right">
-            <div class="image-placeholder">
-                <div class="stat-float">📈 <span>+340%</span></div>
+        <div class="hero-image">
+            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&q=80&w=800"
+                alt="Workspace">
+            <div class="badge">
+                <span class="icon">📈</span>
+                <span class="text"><strong>+340%</strong></span>
             </div>
         </div>
     </section>
 
-    <section class="omni">
-        <div class="omni-grid">
-            <div class="omni-img"></div>
-            <div class="omni-text">
-                <h2>Digital Omnipresence</h2>
-                <p>Dominare il mercato significa essere ovunque. La nostra strategia si basa su un approccio multicanale
-                    che non lascia nulla al caso.</p>
-                <div class="omni-stats">
-                    <div>
-                        <h3>150+</h3>
-                        <p>Clienti attivi</p>
-                    </div>
-                    <div>
-                        <h3>12M€+</h3>
-                        <p>Investiti in ads</p>
-                    </div>
+    <section class="omnipresence container">
+        <div class="omni-img-box">
+            <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&q=80&w=800"
+                alt="Meeting Room">
+        </div>
+        <div class="omni-text-box">
+            <h2>Digital<br>Omnipresence</h2>
+            <div class="red-line"></div>
+            <p>Dominare il mercato significa essere ovunque. La nostra strategia si basa su un approccio multicanale che
+                non lascia nulla al caso.</p>
+            <p>I nostri esperti analizzano il tuo target per posizionarti nei canali migliori con la massima resa.</p>
+            <div class="stats-row">
+                <div class="stat">
+                    <span class="stat-number">150+</span>
+                    <span class="stat-label">Clienti attivi</span>
+                </div>
+                <div class="stat">
+                    <span class="stat-number">12M€+</span>
+                    <span class="stat-label">Investiti in ads</span>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="quote-banner">
-        <h2>"SARAI CATAPULTATO IN UN MONDO DOVE IL SUCCESSO È L'UNICA VIA D'USCITA."</h2>
-        <p>Sei pronto per la tua scalata verso il successo?</p>
-        <button class="btn-red-large">ENTRA NEL GIOCO</button>
+        <div class="container text-center">
+            <h2>"SARAI CATAPULTATO IN UN MONDO<br>DOVE IL SUCCESSO È L'UNICA VIA<br>D'USCITA."</h2>
+            <p>Sei pronto a superare i limiti del tuo settore?</p>
+            <a href="#" class="btn-primary btn-large">ENTRA NEL GIOCO</a>
+        </div>
     </section>
 
-    <section class="services">
-        <h2 class="title-center">I Nostri Servizi</h2>
+    <section class="services container">
+        <div class="section-heading text-center">
+            <h2>I Nostri Servizi</h2>
+            <p>Soluzioni verticali per un mondo orizzontale. Ecco il tuo ecosistema digitale.</p>
+        </div>
         <div class="services-grid">
-            <div class="s-card"><i>🎯</i>
-                <h4>Ads Strategy</h4>
-                <p>Campagne ottimizzate per il massimo ROI.</p>
+            <div class="service-card">
+                <div class="s-icon">🎯</div>
+                <h3>Ads Strategy</h3>
+                <p>Campagne ultra profilate per il massimo ROI su tutte le piattaforme di advertising.</p>
             </div>
-            <div class="s-card"><i>📢</i>
-                <h4>Social Authority</h4>
-                <p>Costruiamo la tua presenza sui social.</p>
+            <div class="service-card">
+                <div class="s-icon">🔄</div>
+                <h3>Social Authority</h3>
+                <p>Costruiamo la tua autorevolezza con strategie di posizionamento inconfondibile.</p>
             </div>
-            <div class="s-card"><i>🚀</i>
-                <h4>Growth Hacking</h4>
-                <p>Strategie scalabili per crescita rapida.</p>
+            <div class="service-card">
+                <div class="s-icon">📈</div>
+                <h3>Growth Hacking</h3>
+                <p>Strategie agili, data-driven, per scalare il tuo progetto nel minor tempo possibile.</p>
             </div>
-            <div class="s-card"><i>📊</i>
-                <h4>SEO Dominance</h4>
-                <p>Scala i risultati dei motori di ricerca.</p>
+            <div class="service-card">
+                <div class="s-icon">🔎</div>
+                <h3>SEO Dominance</h3>
+                <p>Il posizionamento nei motori di ricerca che la tua azienda ha sempre meritato ma mai avuto.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="news container">
+        <div class="news-header">
+            <h2>Ultime News</h2>
+            <a href="#" class="link-red">Vedi tutti ></a>
+        </div>
+        <div class="news-grid">
+            <div class="news-card">
+                <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?auto=format&fit=crop&q=80&w=400"
+                    alt="News 1">
+                <h3>L'algoritmo di Instagram nel 2024</h3>
+                <p>Cosa cambia e come sfruttare a tuo vantaggio i nuovi aggiornamenti della piattaforma.</p>
+                <a href="#" class="link-red-bold">LEGGI DI PIÙ ></a>
+            </div>
+            <div class="news-card">
+                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&q=80&w=400"
+                    alt="News 2">
+                <h3>Perché le Ads falliscono</h3>
+                <p>I 5 motivi principali per cui le tue campagne su Google e Meta stanno bruciando budget.</p>
+                <a href="#" class="link-red-bold">LEGGI DI PIÙ ></a>
+            </div>
+            <div class="news-card">
+                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&q=80&w=400"
+                    alt="News 3">
+                <h3>Omnichannel: il futuro è qui</h3>
+                <p>L'importanza di unire offline e online in un ecosistema unico per massimizzare le vendite.</p>
+                <a href="#" class="link-red-bold">LEGGI DI PIÙ ></a>
             </div>
         </div>
     </section>
 
     <section class="testimonials">
-        <div class="stars">⭐⭐⭐⭐⭐</div>
-        <h2>Dicono di noi</h2>
-        <div class="t-grid">
-            <div class="t-card">"Approccio molto serio e professionale. I risultati sono arrivati subito." <strong>Marco
-                    Rossi</strong></div>
-            <div class="t-card">"La loro strategia di lead generation ha dato una svolta al mio business."
-                <strong>Giulia Moretti</strong></div>
-            <div class="t-card">"Consiglio vivamente FBICom per chi vuole scalare il mercato." <strong>Luca
-                    Verdi</strong></div>
+        <div class="container text-center">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <h2>Dicono di noi</h2>
+            <div class="test-grid">
+                <div class="test-card">
+                    <div class="quote-mark">"</div>
+                    <p>"L'approccio innovativo di FBICOM ha stravolto il nostro modo di fare marketing. Risultati che
+                        non avevamo mai visto in 10 anni di attività."</p>
+                    <div class="author">
+                        <div class="avatar">MR</div>
+                        <div class="author-info">
+                            <strong>Marco Rossi</strong>
+                            <span>CEO, TechVision</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="test-card">
+                    <div class="quote-mark">"</div>
+                    <p>"La loro strategia di lead generation ha dato una svolta al nostro e-commerce. Non potevamo
+                        chiedere di meglio."</p>
+                    <div class="author">
+                        <div class="avatar">GM</div>
+                        <div class="author-info">
+                            <strong>Giulia Moretti</strong>
+                            <span>Founder, StyleBrand</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="test-card">
+                    <div class="quote-mark">"</div>
+                    <p>"Un team di professionisti seri e preparati. Il ROI delle nostre campagne è raddoppiato in soli
+                        tre mesi."</p>
+                    <div class="author">
+                        <div class="avatar">LV</div>
+                        <div class="author-info">
+                            <strong>Luca Verdi</strong>
+                            <span>Direttore Marketing</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <div class="partners">
-        <span>GLOBAL CORP</span> <span>TECH FLOW</span> <span>NEXUS MEDIA</span> <span>ELITE GROUP</span>
-    </div>
+    <section class="partners container">
+        <span>GLOBAL CORP</span>
+        <span>TECH FLOW</span>
+        <span>NEXUS MEDIA</span>
+        <span>ELITE GROUP</span>
+        <span>PRIME SOLUTIONS</span>
+    </section>
 
-    <footer class="footer-exact">
-        <div class="footer-container">
-            <div class="f-col main-f">
+    <footer class="main-footer">
+        <div class="container footer-grid">
+            <div class="footer-col brand-col">
                 <div class="logo-white">FBI<span>COM.</span></div>
-                <p>Siamo l'agenzia di marketing che rompe le regole del business convenzionale per portarti al successo.
-                </p>
-                <div class="social-icons"><span>f</span> <span>in</span> <span>ig</span></div>
+                <p>Siamo l'agenzia che trasforma le regole del gioco digitale per farti vincere. La tua crescita è la
+                    nostra missione.</p>
+                <div class="socials">
+                    <a href="#">Fb</a>
+                    <a href="#">In</a>
+                    <a href="#">Ig</a>
+                </div>
             </div>
-            <div class="f-col">
+            <div class="footer-col">
                 <h4>Contatti</h4>
-                <p>📍 Via Milano, 123 - 20121 Milano</p>
-                <p>📞 +39 02 1234567</p>
-                <p>✉️ info@fbicom.it</p>
+                <ul class="contact-list">
+                    <li><span class="icon-red">📍</span> Via Milano 123, 20121 Milano</li>
+                    <li><span class="icon-red">📞</span> +39 02 1234 5678</li>
+                    <li><span class="icon-red">✉️</span> info@fbicom.it</li>
+                </ul>
             </div>
-            <div class="f-col">
+            <div class="footer-col">
                 <h4>Dove siamo</h4>
-                <div class="mini-map"></div>
+                <div class="map-placeholder">
+                    <div class="pin">📍</div>
+                </div>
             </div>
-            <div class="f-col">
+            <div class="footer-col">
                 <h4>L'Agenzia</h4>
-                <ul>
-                    <li>Chi Siamo</li>
-                    <li>Casi Studio</li>
-                    <li>Lavora con noi</li>
-                    <li>Privacy Policy</li>
+                <ul class="links-list">
+                    <li><a href="#">Chi Siamo</a></li>
+                    <li><a href="#">Casi Studio</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
