Pagina_News_Parte_1

--- a/HTML/Agency.html
+++ b/HTML/Agency.html
@@ -15,12 +15,12 @@
             <a href="#" class="logo-link">
                 <div class="brand-logo" style="font-weight: 900; font-size: 1.5rem;">FBI<span class="text-red">COM.</span></div>
             </a>
-            <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="#agency" class="text-red">Agenzia</a></li>
-                <li><a href="#services">Servizi</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#contact">Contatti</a></li>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="../HTML/home.html">Home</a></li>
+                <li><a href="../HTML/agency.html">Agenzia</a></li>
+                <li><a href="#servizi">Servizi</a></li>
+                <li><a href="../HTML/news.html">News</a></li>
+                <li><a href="#contatti">Contatti</a></li>
             </ul>
             <a href="#contact" class="btn-primary">Contattaci</a>
         </nav>
