--- a/HTML/home.html
+++ b/HTML/home.html
@@ -20,10 +20,10 @@
             </a>
 
             <ul class="nav-links" id="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#agency">Agenzia</a></li>
+                <li><a href="../HTML/home.html">Home</a></li>
+                <li><a href="../HTML/agency.html">Agenzia</a></li>
                 <li><a href="#servizi">Servizi</a></li>
-                <li><a href="#news">News</a></li>
+                <li><a href="../HTML/news.html">News</a></li>
                 <li><a href="#contatti">Contatti</a></li>
             </ul>
 
@@ -200,6 +200,62 @@
                             <h3>Il futuro dei social: tendenze da seguire</h3>
                             <a href="#" class="read-more-btn" aria-label="Leggi l'articolo: Il futuro dei social">LEGGI
                                 DI PIÙ <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials-section">
+            <div class="container text-center">
+                <div class="stars-rating">
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                </div>
+                <h2 class="section-title" style="margin-bottom: 50px;">Dicono di noi</h2>
+
+                <div class="testimonials-grid">
+                    <div class="testimonial-box">
+                        <i class="fa-solid fa-quote-left main-quote"></i>
+                        <p class="review-body">"L'approccio innovativo di FBI Communication ha stravolto il nostro modo
+                            di fare marketing. Risultati tangibili in tempi record. Un partner strategico fondamentale."
+                        </p>
+                        <div class="reviewer">
+                            <div class="reviewer-photo"
+                                style="background-image: url('https://ui-avatars.com/api/?name=Marco+Rossi&background=random&color=fff&size=128');">
+                            </div>
+                            <div class="reviewer-data">
+                                <h4>MARCO ROSSI</h4>
+                                <span>CEO, TechVision</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-box">
+                        <i class="fa-solid fa-quote-left main-quote"></i>
+                        <p class="review-body">"Strategia lead generation impeccabile. Il ROI delle nostre campagne è
+                            raddoppiato in soli tre mesi di collaborazione. Altamente consigliati."</p>
+                        <div class="reviewer">
+                            <div class="reviewer-photo"
+                                style="background-image: url('https://ui-avatars.com/api/?name=Giulia+Moretti&background=random&color=fff&size=128');">
+                            </div>
+                            <div class="reviewer-data">
+                                <h4>GIULIA MORETTI</h4>
+                                <span>Founder, StyleBrand</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-box">
+                        <i class="fa-solid fa-quote-left main-quote"></i>
+                        <p class="review-body">"Un team di professionisti seri che sa davvero cosa significa scalare un
+                            business nel mercato digitale odierno. Supporto costante e proattivo."</p>
+                        <div class="reviewer">
+                            <div class="reviewer-photo"
+                                style="background-image: url('https://ui-avatars.com/api/?name=Luca+Verdi&background=random&color=fff&size=128');">
+                            </div>
+                            <div class="reviewer-data">
+                                <h4>LUCA VERDI</h4>
+                                <span>Marketing Manager</span>
+                            </div>
                         </div>
                     </div>
                 </div>
