Pagina_Contacto_Parte1

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,25 +15,24 @@
 <body>
     <header id="main-header" class="header">
         <nav class="container nav-wrapper">
-            <a href="#home" class="logo-link" aria-label="Torna alla Home di FBI Communication">
+            <a href="home.html" class="logo-link" aria-label="Torna alla Home di FBI Communication">
                 <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo">
             </a>
-
+            
             <ul class="nav-links" id="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#agency">Agenzia</a></li>
-                <li><a href="#servizi">Servizi</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#contatti">Contatti</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="Agency.html">Agenzia</a></li>
+                <li><a href="#">Servizi</a></li>
+                <li><a href="#">News</a></li>
+                <li class="mobile-only"><a href="contact.html" class="text-red">Contatti</a></li>
             </ul>
 
-            <a href="#contatti" class="btn-primary desktop-only">Contattaci</a>
+            <a href="contact.html" class="btn-primary desktop-only">Contattaci</a>
 
-            <button class="hamburger" id="hamburger" aria-label="Apri menu di navigazione" aria-expanded="false"
-                aria-controls="nav-links">
-                <span class="bar" aria-hidden="true"></span>
-                <span class="bar" aria-hidden="true"></span>
-                <span class="bar" aria-hidden="true"></span>
+            <button class="hamburger" id="hamburger" aria-label="Menu" aria-expanded="false" aria-controls="nav-links">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </button>
         </nav>
     </header>
