--- a/HTML/home.html
+++ b/HTML/home.html
@@ -21,7 +21,7 @@
 
             <ul class="nav-links" id="nav-links">
                 <li><a href="../HTML/home.html">Home</a></li>
-                <li><a href="../HTML/agency.html">Agenzia</a></li>
+                <li><a href="../HTML/Agency.html">Agenzia</a></li>
                 <li><a href="#servizi">Servizi</a></li>
                 <li><a href="../HTML/news.html">News</a></li>
                 <li><a href="#contatti">Contatti</a></li>
