Pagina_Web_Finalizada_Parte_1

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -19,12 +19,11 @@
             </a>
             
             <ul class="nav-links" id="nav-links">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="Agency.html">Agenzia</a></li>
-                <li><a href="#">Servizi</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="../HTML/home.html">Home</a></li>
+                <li><a href="../HTML/Agency.html">Agenzia</a></li>
+                <li><a href="../HTML/news.html">News</a></li>
                 <li class="mobile-only"><a href="contact.html" class="text-red">Contatti</a></li>
-            </ul>
+            </ul>   
 
             <a href="contact.html" class="btn-primary desktop-only">Contattaci</a>
 
