--- a/HTML/news.html
+++ b/HTML/news.html
@@ -23,11 +23,10 @@
                 <ul class="nav-links" id="nav-links">
                     <li><a href="../HTML/home.html">Home</a></li>
                     <li><a href="../HTML/Agency.html">Agenzia</a></li>
-                    <li><a href="#servizi">Servizi</a></li>
                     <li><a href="../HTML/news.html">News</a></li>
-                    <li><a href="#contatti">Contatti</a></li>
+                    <li class="mobile-only"><a href="contact.html" class="text-red">Contatti</a></li>
                 </ul>
-                <a href="home.html#contatti" class="btn-    primary desktop-only">Contattaci</a>
+                <a href="home.html#contatti" class="btn-primary desktop-only">Contattaci</a>
 
                 <button class="hamburger" id="hamburger" aria-label="Apri menu di navigazione" aria-expanded="false"
                     aria-controls="nav-links">
