--- a/HTML/Agency.html
+++ b/HTML/Agency.html
@@ -134,15 +134,17 @@
 
     <footer id="contatti" class="main-footer">
         <div class="container footer-grid">
-
             <div class="footer-col brand-col">
                 <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
                 <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
                     nostro coraggio creativo al tuo servizio.</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                            aria-hidden="true"></i></a>
                 </div>
             </div>
 
@@ -150,10 +152,11 @@
                 <h4>Contatti</h4>
                 <p class="footer-subtitle">INDICAZIONI</p>
                 <ul class="contact-list">
-                    <li><i class="fa-regular fa-building icon-red"></i> Viale Magna Grecia, 13 - 88100 Catanzaro</li>
-                    <li><i class="fa-solid fa-location-dot icon-red"></i> Via Lucrezia della Valle, 19 - 88100 Catanzaro
-                    </li>
-                    <li><i class="fa-solid fa-phone icon-red"></i> 0961 730934</li>
+                    <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
+                        88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della Valle,
+                        19 - 88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
                 </ul>
             </div>
 
@@ -161,8 +164,8 @@
                 <h4>Dove Siamo</h4>
                 <div class="map-wrapper">
                     <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
-                        alt="Mappa Catanzaro" class="map-img">
-                    <div class="map-pin"><i class="fa-solid fa-location-dot"></i></div>
+                        alt="Mappa della sede a Catanzaro" class="map-img">
+                    <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
                 </div>
             </div>
 
@@ -175,7 +178,6 @@
                     <li><a href="#">Lavora con noi</a></li>
                 </ul>
             </div>
-
         </div>
 
         <div class="container footer-bottom">
