--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -34,7 +34,7 @@
             </button>
         </nav>
     </header>
-    
+
     <section class="contact-hero bg-dark text-white" style="padding: 150px 0 80px; text-align: center;">
         <div class="container">
             <h1 class="hero-title" style="margin-bottom: 20px;">Mettiamoci in <span class="text-red">Contatto</span></h1>
@@ -117,48 +117,61 @@
         </div>
     </section>
 
-    <footer class="main-footer">
+    <footer id="contatti" class="main-footer">
         <div class="container footer-grid">
             <div class="footer-col brand-col">
-                <div class="brand-logo" style="font-weight: 900; font-size: 1.5rem; margin-bottom: 20px;">FBI<span class="text-red">COM.</span></div>
-                <p class="footer-desc">Da oltre 10 anni trasformiamo idee in progetti di comunicazione vincenti per il tuo business.</p>
+                <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
+                <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
+                    nostro coraggio creativo al tuo servizio.</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                            aria-hidden="true"></i></a>
                 </div>
             </div>
 
             <div class="footer-col">
                 <h4>Contatti</h4>
+                <p class="footer-subtitle">INDICAZIONI</p>
                 <ul class="contact-list">
-                    <li><i class="fa-solid fa-location-dot icon-red"></i> Via Lucrezia della Valle, 19 - 88100 Catanzaro</li>
-                    <li><i class="fa-solid fa-phone icon-red"></i> 0961 730934</li>
+                    <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
+                        88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della Valle,
+                        19 - 88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
                 </ul>
             </div>
 
             <div class="footer-col">
                 <h4>Dove Siamo</h4>
-                <div class="map-wrapper" style="position: relative; border-radius: 10px; overflow: hidden; height: 150px;">
-                    <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400" alt="Mappa Catanzaro" style="width: 100%; height: 100%; object-fit: cover; display: block;">
-                    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: var(--primary-red); font-size: 2rem;">
-                        <i class="fa-solid fa-location-dot"></i>
-                    </div>
+                <div class="map-wrapper">
+                    <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
+                        alt="Mappa della sede a Catanzaro" class="map-img">
+                    <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
                 </div>
             </div>
 
             <div class="footer-col">
                 <h4>L'Agenzia</h4>
                 <ul class="links-list">
-                    <li><a href="Agency.html">Chi Siamo</a></li>
-                    <li><a href="#">I Nostri Servizi</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Chi Siamo</a></li>
+                    <li><a href="#servizi">I Nostri Servizi</a></li>
+                    <li><a href="#news">Ultime News</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
                 </ul>
             </div>
         </div>
+
         <div class="container footer-bottom">
-            <div class="bottom-links"><a href="#">Termini e Condizioni</a> | <a href="#">Privacy Policy</a></div>
-            <div class="copyright"><p>© 2024 FBI Communication. Tutti i diritti riservati.</p></div>
+            <div class="bottom-links">
+                <a href="#">Termini e Condizioni</a> | <a href="#">Privacy Policy</a>
+            </div>
+            <div class="copyright">
+                <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
+            </div>
         </div>
     </footer>
 
