Pagina_Web_Finalizada_Parte_2

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -48,7 +48,7 @@
                     insegnandoti come si nuota in questo enorme oceano di concorrenti. Ti trasformeremo alla fine, da
                     piccolo pesciolino indifeso a squalo del tuo settore.</p>
                 <div class="hero-actions">
-                    <a href="#agency" class="btn-primary">CHI SIAMO</a>
+                    <a href="../HTML/Agency.html" class="btn-primary">CHI SIAMO</a>
                 </div>
             </div>
             <div class="hero-image-wrapper">
@@ -346,7 +346,7 @@
                     <li><a href="#">Chi Siamo</a></li>
                     <li><a href="#servizi">I Nostri Servizi</a></li>
                     <li><a href="#news">Ultime News</a></li>
-                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="contact.html">Lavora con noi</a></li>
                 </ul>
             </div>
         </div>
