--- a/HTML/news.html
+++ b/HTML/news.html
@@ -20,13 +20,14 @@
                     <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo">
                 </a>
 
-                <ul class="nav-links" id="nav-links">
-                    <li><a href="../HTML/home.html">Home</a></li>
-                    <li><a href="../HTML/Agency.html">Agenzia</a></li>
-                    <li><a href="../HTML/news.html">News</a></li>
-                    <li class="mobile-only"><a href="contact.html" class="text-red">Contatti</a></li>
-                </ul>
-                <a href="home.html#contatti" class="btn-primary desktop-only">Contattaci</a>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="../HTML/home.html">Home</a></li>
+                <li><a href="../HTML/Agency.html">Agenzia</a></li>
+                <li><a href="../HTML/news.html">News</a></li>
+                <li class="mobile-only"><a href="../HTML/contact.html" class="text-red">Contatti</a></li>
+            </ul>
+
+                <a href="../HTML/contact.html" class="btn-primary desktop-only">Contattaci</a>
 
                 <button class="hamburger" id="hamburger" aria-label="Apri menu di navigazione" aria-expanded="false"
                     aria-controls="nav-links">
@@ -60,7 +61,7 @@
                             <p class="news-excerpt">Non basta avere un logo. Scopri i pilastri fondamentali per creare
                                 un'identità di marca che risuoni con il tuo pubblico e ti distingua dalla concorrenza
                                 locale e nazionale.</p>
-                            <a href="#" class="read-more-btn">LEGGI L'ARTICOLO <i class="fa-solid fa-arrow-right"
+                            <a href="./ARTICLES/article.html" class="read-more-btn">LEGGI L'ARTICOLO <i class="fa-solid fa-arrow-right"
                                     aria-hidden="true"></i></a>
                         </div>
                     </article>
@@ -74,7 +75,7 @@
                             <div class="news-content-horiz">
                                 <span class="news-category">SOCIAL MEDIA</span>
                                 <h3>L'algoritmo di Instagram è cambiato ancora: cosa devi sapere</h3>
-                                <a href="#" class="read-more-btn small">Leggi di più <i
+                                <a href="./ARTICLES/article2.html" class="read-more-btn small">Leggi di più <i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </article>
@@ -87,7 +88,7 @@
                             <div class="news-content-horiz">
                                 <span class="news-category">DATA & ANALYTICS</span>
                                 <h3>Perché i dati sono il nuovo petrolio per le PMI</h3>
-                                <a href="#" class="read-more-btn small">Leggi di più <i
+                                <a href="ARTICLES/article3.html" class="read-more-btn small">Leggi di più <i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </article>
