Pagina_Wen_Finalizada_Parte_4

--- a/HTML/Agency.html
+++ b/HTML/Agency.html
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <section class="team-section bg-light text-center section-spacing">
+    <section id="team" class="team-section bg-light text-center section-spacing">
         <div class="container">
             <div class="section-heading">
                 <h2>Il Nostro <span class="text-red">Team</span></h2>
@@ -175,14 +175,14 @@
                     <li><a href="#">Chi Siamo</a></li>
                     <li><a href="#servizi">I Nostri Servizi</a></li>
                     <li><a href="#news">Ultime News</a></li>
-                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="contact.html">Lavora con noi</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="container footer-bottom">
             <div class="bottom-links">
-                <a href="#">Termini e Condizioni</a> | <a href="#">Privacy Policy</a>
+                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a href="../HTML/privacy-policy.html">Privacy Policy</a>
             </div>
             <div class="copyright">
                 <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
