--- a/HTML/home.html
+++ b/HTML/home.html
@@ -48,7 +48,7 @@
                     insegnandoti come si nuota in questo enorme oceano di concorrenti. Ti trasformeremo alla fine, da
                     piccolo pesciolino indifeso a squalo del tuo settore.</p>
                 <div class="hero-actions">
-                    <a href="../HTML/Agency.html" class="btn-primary">CHI SIAMO</a>
+                    <a href="/Remodelacion-FBI-Communication/HTML/Agency.html#team" class="btn-primary">CHI SIAMO</a>
                 </div>
             </div>
             <div class="hero-image-wrapper">
@@ -79,7 +79,7 @@
                         mente
                         degli utenti.</p>
                     <p class="highlight-text"><strong>La tua agenzia di marketing in Calabria</strong></p>
-                    <a href="#servizi" class="btn-primary">Scopri di più</a>
+                    <a href="./ARTICLES/article-social.html" class="btn-primary">Scopri di più</a>
                 </div>
             </div>
         </section>
@@ -343,17 +343,17 @@
             <div class="footer-col">
                 <h4>L'Agenzia</h4>
                 <ul class="links-list">
-                    <li><a href="#">Chi Siamo</a></li>
-                    <li><a href="#servizi">I Nostri Servizi</a></li>
-                    <li><a href="#news">Ultime News</a></li>
-                    <li><a href="contact.html">Lavora con noi</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html">Chi Siamo</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html#servizi">I Nostri Servizi</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/news.html">Ultime News</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/contact.html">Lavora con noi</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="container footer-bottom">
             <div class="bottom-links">
-                <a href="#">Termini e Condizioni</a> | <a href="#">Privacy Policy</a>
+                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a href="../HTML/privacy-policy.html">Privacy Policy</a>
             </div>
             <div class="copyright">
                 <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
