--- a/HTML/news.html
+++ b/HTML/news.html
@@ -7,6 +7,7 @@
         <meta name="description"
             content="News e Articoli - FBI Communication. Approfondimenti sul marketing digitale, social media e brand strategy in Calabria.">
         <title>News & Articoli | FBI Communication</title>
+        <link rel="stylesheet" href="../CSS/home.css">
         <link rel="stylesheet" href="../CSS/news.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
             rel="stylesheet">
@@ -185,63 +186,63 @@
             </section>
         </main>
 
-        <footer id="contatti" class="main-footer">
-            <div class="container footer-grid">
-                <div class="footer-col brand-col">
-                    <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
-                    <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
-                        nostro coraggio creativo al tuo servizio.</p>
-                    <div class="social-icons">
-                        <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
-                                aria-hidden="true"></i></a>
-                        <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
-                                aria-hidden="true"></i></a>
-                        <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
-                                aria-hidden="true"></i></a>
-                    </div>
-                </div>
-
-                <div class="footer-col">
-                    <h4>Contatti</h4>
-                    <p class="footer-subtitle">INDICAZIONI</p>
-                    <ul class="contact-list">
-                        <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
-                            88100 Catanzaro</li>
-                        <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della
-                            Valle, 19 - 88100 Catanzaro</li>
-                        <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
-                    </ul>
-                </div>
-
-                <div class="footer-col">
-                    <h4>Dove Siamo</h4>
-                    <div class="map-wrapper">
-                        <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
-                            alt="Mappa della sede a Catanzaro" class="map-img">
-                        <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
-                    </div>
-                </div>
-
-                <div class="footer-col">
-                    <h4>L'Agenzia</h4>
-                    <ul class="links-list">
-                        <li><a href="home.html#home">Chi Siamo</a></li>
-                        <li><a href="home.html#servizi">I Nostri Servizi</a></li>
-                        <li><a href="news.html">Ultime News</a></li>
-                        <li><a href="home.html#contatti">Lavora con noi</a></li>
-                    </ul>
+    <footer id="contatti" class="main-footer">
+        <div class="container footer-grid">
+            <div class="footer-col brand-col">
+                <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
+                <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
+                    nostro coraggio creativo al tuo servizio.</p>
+                <div class="social-icons">
+                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                            aria-hidden="true"></i></a>
+                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                            aria-hidden="true"></i></a>
                 </div>
             </div>
 
-            <div class="container footer-bottom">
-                <div class="bottom-links">
-                    <a href="#">Termini e Condizioni</a> | <a href="#">Privacy Policy</a>
-                </div>
-                <div class="copyright">
-                    <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
+            <div class="footer-col">
+                <h4>Contatti</h4>
+                <p class="footer-subtitle">INDICAZIONI</p>
+                <ul class="contact-list">
+                    <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
+                        88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della Valle,
+                        19 - 88100 Catanzaro</li>
+                    <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Dove Siamo</h4>
+                <div class="map-wrapper">
+                    <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
+                        alt="Mappa della sede a Catanzaro" class="map-img">
+                    <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
                 </div>
             </div>
-        </footer>
+
+            <div class="footer-col">
+                <h4>L'Agenzia</h4>
+                <ul class="links-list">
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html">Chi Siamo</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html#servizi">I Nostri Servizi</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/news.html">Ultime News</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/contact.html">Lavora con noi</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container footer-bottom">
+            <div class="bottom-links">
+                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a href="../HTML/privacy-policy.html">Privacy Policy</a>
+            </div>
+            <div class="copyright">
+                <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
+            </div>
+        </div>
+    </footer>
 
         <script src="../JS/script.js"></script>
     </body>
