Pagina_Web_Casi_Finalizada

--- a/HTML/term-conditions.html
+++ b/HTML/term-conditions.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termini e Condizioni di utilizzo del sito web di FBI Communication.">
     <title>Termini e Condizioni | FBI Communication</title>
+    <link rel="stylesheet" href="/Remodelacion-FBI-Communication/CSS/home.css">
     <link rel="stylesheet" href="/Remodelacion-FBI-Communication/CSS/news.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -86,11 +87,14 @@
                 <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
                     nostro coraggio creativo al tuo servizio.</p>
                 <div class="social-icons">
-                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                    <a href="https://www.facebook.com/FBIcommunication/"
+                        aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                    <a href="https://www.instagram.com/fbicommunication"
+                        aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                    <a href="https://www.youtube.com/channel/UCi1wiBHUTnvhEHFfmtAKFrw"
+                        aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-youtube"
                             aria-hidden="true"></i></a>
                 </div>
             </div>
