--- a/HTML/Agency.html
+++ b/HTML/Agency.html
@@ -139,11 +139,14 @@
                 <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
                     nostro coraggio creativo al tuo servizio.</p>
                 <div class="social-icons">
-                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                    <a href="https://www.facebook.com/FBIcommunication/"
+                        aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                    <a href="https://www.instagram.com/fbicommunication"
+                        aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                    <a href="https://www.youtube.com/channel/UCi1wiBHUTnvhEHFfmtAKFrw"
+                        aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-youtube"
                             aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -172,17 +175,18 @@
             <div class="footer-col">
                 <h4>L'Agenzia</h4>
                 <ul class="links-list">
-                    <li><a href="#">Chi Siamo</a></li>
-                    <li><a href="#servizi">I Nostri Servizi</a></li>
-                    <li><a href="#news">Ultime News</a></li>
-                    <li><a href="contact.html">Lavora con noi</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html">Chi Siamo</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html#servizi">I Nostri Servizi</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/news.html">Ultime News</a></li>
+                    <li><a href="/Remodelacion-FBI-Communication/HTML/contact.html">Lavora con noi</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="container footer-bottom">
             <div class="bottom-links">
-                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a href="../HTML/privacy-policy.html">Privacy Policy</a>
+                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a
+                    href="../HTML/privacy-policy.html">Privacy Policy</a>
             </div>
             <div class="copyright">
                 <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
