--- a/HTML/home.html
+++ b/HTML/home.html
@@ -310,11 +310,11 @@
                 <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
                     nostro coraggio creativo al tuo servizio.</p>
                 <div class="social-icons">
-                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                    <a href="https://www.facebook.com/FBIcommunication/" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                    <a href="https://www.instagram.com/fbicommunication" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
+                    <a href="https://www.youtube.com/channel/UCi1wiBHUTnvhEHFfmtAKFrw" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-youtube"
                             aria-hidden="true"></i></a>
                 </div>
             </div>
