--- a/HTML/news.html
+++ b/HTML/news.html
@@ -21,12 +21,12 @@
                     <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo">
                 </a>
 
-            <ul class="nav-links" id="nav-links">
-                <li><a href="../HTML/home.html">Home</a></li>
-                <li><a href="../HTML/Agency.html">Agenzia</a></li>
-                <li><a href="../HTML/news.html">News</a></li>
-                <li class="mobile-only"><a href="../HTML/contact.html" class="text-red">Contatti</a></li>
-            </ul>
+                <ul class="nav-links" id="nav-links">
+                    <li><a href="../HTML/home.html">Home</a></li>
+                    <li><a href="../HTML/Agency.html">Agenzia</a></li>
+                    <li><a href="../HTML/news.html">News</a></li>
+                    <li class="mobile-only"><a href="../HTML/contact.html" class="text-red">Contatti</a></li>
+                </ul>
 
                 <a href="../HTML/contact.html" class="btn-primary desktop-only">Contattaci</a>
 
@@ -62,8 +62,8 @@
                             <p class="news-excerpt">Non basta avere un logo. Scopri i pilastri fondamentali per creare
                                 un'identità di marca che risuoni con il tuo pubblico e ti distingua dalla concorrenza
                                 locale e nazionale.</p>
-                            <a href="./ARTICLES/article.html" class="read-more-btn">LEGGI L'ARTICOLO <i class="fa-solid fa-arrow-right"
-                                    aria-hidden="true"></i></a>
+                            <a href="./ARTICLES/article.html" class="read-more-btn">LEGGI L'ARTICOLO <i
+                                    class="fa-solid fa-arrow-right" aria-hidden="true"></i></a>
                         </div>
                     </article>
 
@@ -186,63 +186,68 @@
             </section>
         </main>
 
-    <footer id="contatti" class="main-footer">
-        <div class="container footer-grid">
-            <div class="footer-col brand-col">
-                <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
-                <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
-                    nostro coraggio creativo al tuo servizio.</p>
-                <div class="social-icons">
-                    <a href="#" aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
-                            aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
-                            aria-hidden="true"></i></a>
-                    <a href="#" aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-linkedin-in"
-                            aria-hidden="true"></i></a>
+        <footer id="contatti" class="main-footer">
+            <div class="container footer-grid">
+                <div class="footer-col brand-col">
+                    <img src="../MULTIMEDIA/LOGO/logo.png" alt="FBI Communication Logo" class="brand-logo-footer">
+                    <p class="footer-desc">Siamo l'agenzia di servizi che si occupa della tua attività a 360 gradi. Il
+                        nostro coraggio creativo al tuo servizio.</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/FBIcommunication/"
+                            aria-label="Visita il nostro profilo Facebook"><i class="fa-brands fa-facebook-f"
+                                aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/fbicommunication"
+                            aria-label="Visita il nostro profilo Instagram"><i class="fa-brands fa-instagram"
+                                aria-hidden="true"></i></a>
+                        <a href="https://www.youtube.com/channel/UCi1wiBHUTnvhEHFfmtAKFrw"
+                            aria-label="Visita il nostro profilo LinkedIn"><i class="fa-brands fa-youtube"
+                                aria-hidden="true"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Contatti</h4>
+                    <p class="footer-subtitle">INDICAZIONI</p>
+                    <ul class="contact-list">
+                        <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
+                            88100 Catanzaro</li>
+                        <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della
+                            Valle,
+                            19 - 88100 Catanzaro</li>
+                        <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h4>Dove Siamo</h4>
+                    <div class="map-wrapper">
+                        <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
+                            alt="Mappa della sede a Catanzaro" class="map-img">
+                        <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h4>L'Agenzia</h4>
+                    <ul class="links-list">
+                        <li><a href="/Remodelacion-FBI-Communication/HTML/home.html">Chi Siamo</a></li>
+                        <li><a href="/Remodelacion-FBI-Communication/HTML/home.html#servizi">I Nostri Servizi</a></li>
+                        <li><a href="/Remodelacion-FBI-Communication/HTML/news.html">Ultime News</a></li>
+                        <li><a href="/Remodelacion-FBI-Communication/HTML/contact.html">Lavora con noi</a></li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="footer-col">
-                <h4>Contatti</h4>
-                <p class="footer-subtitle">INDICAZIONI</p>
-                <ul class="contact-list">
-                    <li><i class="fa-regular fa-building icon-red" aria-hidden="true"></i> Viale Magna Grecia, 13 -
-                        88100 Catanzaro</li>
-                    <li><i class="fa-solid fa-location-dot icon-red" aria-hidden="true"></i> Via Lucrezia della Valle,
-                        19 - 88100 Catanzaro</li>
-                    <li><i class="fa-solid fa-phone icon-red" aria-hidden="true"></i> 0961 730934</li>
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h4>Dove Siamo</h4>
-                <div class="map-wrapper">
-                    <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?auto=format&fit=crop&q=80&w=400"
-                        alt="Mappa della sede a Catanzaro" class="map-img">
-                    <div class="map-pin" aria-hidden="true"><i class="fa-solid fa-location-dot"></i></div>
+            <div class="container footer-bottom">
+                <div class="bottom-links">
+                    <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a
+                        href="../HTML/privacy-policy.html">Privacy Policy</a>
+                </div>
+                <div class="copyright">
+                    <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
                 </div>
             </div>
-
-            <div class="footer-col">
-                <h4>L'Agenzia</h4>
-                <ul class="links-list">
-                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html">Chi Siamo</a></li>
-                    <li><a href="/Remodelacion-FBI-Communication/HTML/home.html#servizi">I Nostri Servizi</a></li>
-                    <li><a href="/Remodelacion-FBI-Communication/HTML/news.html">Ultime News</a></li>
-                    <li><a href="/Remodelacion-FBI-Communication/HTML/contact.html">Lavora con noi</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="container footer-bottom">
-            <div class="bottom-links">
-                <a href="../HTML/term-conditions.html">Termini e Condizioni</a> | <a href="../HTML/privacy-policy.html">Privacy Policy</a>
-            </div>
-            <div class="copyright">
-                <p>© 2026 FBI Communication. Tutti i diritti riservati.</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
         <script src="../JS/script.js"></script>
     </body>
